# questdb-statuspage

./: .coveragerc  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pylintrc  pyproject.toml  pytest.ini
app/: celery.py  main.py  models.py  settings.py  tasks.py
frontend/: README.md  nuxt.config.js  package.json
frontend/pages/: index.vue
scripts/: start.sh  start_worker.sh
sql/: create-table.sql
