[tool.poetry]
name = "questdb-tutorial-statuspage"
version = "0.1.0"
description = "QuestDB tutorial for creating a simple status page."
authors = ["Gábor Boros <gabor.brs@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
celery = {extras = ["redis"], version = "^5.2.7"}
fastapi = "^0.81.0"
psycopg = {extras = ["pool"], version = "^3.0.16"}
pydantic = "^1.9.2"
requests = "^2.28.1"
uvicorn = "^0.18.3"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
coverage = "^6.4.4"
isort = "^5.10.1"
mypy = "^0.971"
pylint = "^2.15.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py38']

[tool.isort]
atomic = true
case_sensitive = true
combine_star = true
force_sort_within_sections = true
include_trailing_comma = true
order_by_type = true
line_length = 88  # Same as Black's line length
multi_line_output = 3
